fix 2 chức năng